verification module on mobile, the position is not correct: it is placed below the fold ( all popups in mobile)

--- a/app/assets/stylesheets/web/common/Body.scss
+++ b/app/assets/stylesheets/web/common/Body.scss
@@ -360,7 +360,9 @@ input[type="checkbox"]:checked ~ label::after{
 
 .modal:before {
   content: '';
-  display: inline-block;
+  @media(min-width: 768px){
+    display: inline-block;
+  }
   height: 100%;
   vertical-align: middle;
   margin-right: -4px;
